--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "mathquill",
+  "name": "illuminate-mathquill",
   "description": "Easily type math in your webapp",
   "version": "0.10.1",
   "license": "MPL-2.0",
